Add global tech trend platforms to config
Added new technology trend platforms to the config.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -99,3 +99,20 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+  # ====== 🔥 新增：全球科技趋势平台 ======
+  - id: "hackernews"
+    name: "Hacker News"
+  - id: "reddit-hot"
+    name: "Reddit Hot"
+  - id: "techcrunch"
+    name: "TechCrunch"
+  - id: "wired"
+    name: "WIRED"
+  - id: "reuters-tech"
+    name: "Reuters Tech"
+  - id: "bloomberg-tech"
+    name: "Bloomberg Tech"
+  - id: "ft-tech"
+    name: "Financial Times Tech"
+  - id: "theverge"
+    name: "The Verge"
